# slide2anki

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SPECIFICATION.md
.github/workflows/: ci.yml  release.yml
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: __init__.py  main.py  settings.py
apps/api/app/db/: models.py  session.py
apps/api/app/db/migrations/: env.py
apps/api/app/routers/: auth.py  decks.py  documents.py  exports.py  health.py  jobs.py  markdown.py  projects.py  review.py  settings.py  uploads.py
apps/api/app/schemas/: api.py
apps/api/app/services/: progress.py  queue.py  storage.py
apps/web/: .env.example  .gitignore  jest.config.js  next.config.js  package-lock.json  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/decks/: DecksClient.tsx  page.tsx
apps/web/app/jobs/[jobId]/: page.tsx
apps/web/app/projects/: page.tsx
apps/web/app/projects/[projectId]/: page.tsx
apps/web/app/review/: ReviewClient.tsx  page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: Button.tsx  Card.tsx
apps/web/lib/: api.ts  store.ts
apps/web/tests/: page.test.tsx
infra/docker/: api.Dockerfile  docker-compose.yml  web.Dockerfile  worker.Dockerfile
infra/docker/postgres/: init.sql
infra/scripts/: dev.sh  reset_db.sh  run_full_stack.sh  stop_full_stack.sh
tools/: generate_openapi_client.sh  lint.sh
workers/runner/: .env.example  README.md  pyproject.toml
workers/runner/runner/: __init__.py  config.py  worker.py
workers/runner/runner/tasks/: __init__.py  build_markdown.py  export_deck.py  generate_decks.py  helpers.py  run_pipeline.py
