[project]
name = "slide2anki-runner"
version = "0.1.0"
description = "Background job worker for slide2anki"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "redis>=5.0.0",
    "rq>=1.16.0",
    "slide2anki-core",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "minio>=7.2.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["runner"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
